Fix navbar on firefox and Opera

--- a/nivls_website/nivls_website/static_files/static/commons/css/app/ids.less
+++ b/nivls_website/nivls_website/static_files/static/commons/css/app/ids.less
@@ -304,7 +304,7 @@ ul#lab-nav-list {
 }
 
 #navbar-main-list > li {
-    width: 90px;
+    width: 91px;
 
     & > a {
         position: relative;
